recursion.logo.polygonfractal.PolygonFractal.scala.error
Compilation error:
PolygonFractal:10: error: not found: value sierpinski
      sierpinski(levels-1, length*shrink)
      ^