recursion.logo.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
  if (levels==0){
		for (i<-1 to sides){
      avance(length)
    	right(360/sides)
    }
  }
  else {
    for (i<-1 to sides){
      sierpinski(levels-1, length*shrink)
      avance(length)
      right(360/sides)
    }
  }
}